compiler-core/main/__generate/javascript/tests/snapshots/gleam_core____generate__javascript__tests__bit_arrays__bits_typescript.snap
---
source: compiler-core/src_refactored/__generate/javascript/tests/bit_arrays.rs
assertion_line: 403
expression: "\npub fn go(x) {\n  <<x:bits>>\n}\n"
snapshot_kind: text
---
----- SOURCE CODE

pub fn go(x) {
  <<x:bits>>
}


----- TYPESCRIPT DEFINITIONS
import type * as _ from "../gleam.d.mts";

export function go(x: _.BitArray): _.BitArray;
