compiler-core/main/__generate/javascript/tests/snapshots/gleam_core____generate__javascript__tests__bit_arrays__block_in_pattern_size.snap
---
source: compiler-core/src_refactored/__generate/javascript/tests/bit_arrays.rs
assertion_line: 2601
expression: "\npub fn main() {\n  let assert <<len, payload:size({ len - 1 } * 8)>> = <<>>\n}\n"
snapshot_kind: text
---
----- SOURCE CODE

pub fn main() {
  let assert <<len, payload:size({ len - 1 } * 8)>> = <<>>
}


----- COMPILED JAVASCRIPT
import { makeError, toBitArray, bitArraySliceToInt } from "../gleam.mjs";

const FILEPATH = "src/module.gleam";

export function main() {
  let $ = toBitArray([]);
  let len$1;
  let payload;
  if ($.bitSize >= 8) {
    let len = $.byteAt(0);
    if ((len - 1) * 8 >= 0 && $.bitSize === 8 + (len - 1) * 8) {
      len$1 = len;
      payload = bitArraySliceToInt($, 8, 8 + (len$1 - 1) * 8, true, false);
    } else {
      throw makeError(
        "let_assert",
        FILEPATH,
        "my/mod",
        3,
        "main",
        "Pattern match failed, no pattern matched the value.",
        { value: $, start: 19, end: 75, pattern_start: 30, pattern_end: 68 }
      )
    }
  } else {
    throw makeError(
      "let_assert",
      FILEPATH,
      "my/mod",
      3,
      "main",
      "Pattern match failed, no pattern matched the value.",
      { value: $, start: 19, end: 75, pattern_start: 30, pattern_end: 68 }
    )
  }
  return $;
}
