compiler-core/main/__generate/javascript/tests/snapshots/gleam_core____generate__javascript__tests__bit_arrays__case_bit_array_assignment_discard.snap
---
source: compiler-core/src_refactored/__generate/javascript/tests/bit_arrays.rs
assertion_line: 2088
expression: "\npub fn go(x) {\n case x {\n    <<_ as n>>\n    | <<_ as n, _:bytes>> -> n\n    _ -> 1\n }\n}\n"
snapshot_kind: text
---
----- SOURCE CODE

pub fn go(x) {
 case x {
    <<_ as n>>
    | <<_ as n, _:bytes>> -> n
    _ -> 1
 }
}


----- COMPILED JAVASCRIPT
export function go(x) {
  if (x.bitSize === 8) {
    let n = x.byteAt(0);
    return n;
  } else if (x.bitSize >= 8 && (x.bitSize - 8) % 8 === 0) {
    let n = x.byteAt(0);
    return n;
  } else {
    return 1;
  }
}
