compiler-core/main/__generate/javascript/tests/snapshots/gleam_core____generate__javascript__tests__bit_arrays__case_bit_array_assignment_int.snap
---
source: compiler-core/src_refactored/__generate/javascript/tests/bit_arrays.rs
assertion_line: 2004
expression: "\npub fn go(x) {\n case x {\n    <<1 as n>>\n    | <<2 as n, _:bytes>> -> n\n    _ -> 1\n }\n}\n"
snapshot_kind: text
---
----- SOURCE CODE

pub fn go(x) {
 case x {
    <<1 as n>>
    | <<2 as n, _:bytes>> -> n
    _ -> 1
 }
}


----- COMPILED JAVASCRIPT
export function go(x) {
  if (x.bitSize === 8) {
    if (x.byteAt(0) === 1) {
      let n = 1;
      return n;
    } else if (x.byteAt(0) === 2 && (x.bitSize - 8) % 8 === 0) {
      let n = 2;
      return n;
    } else {
      return 1;
    }
  } else if (x.bitSize >= 8 && x.byteAt(0) === 2 && (x.bitSize - 8) % 8 === 0) {
    let n = 2;
    return n;
  } else {
    return 1;
  }
}
